Fix gutter spacing

--- a/src/assets/scss/_settings-skye.scss
+++ b/src/assets/scss/_settings-skye.scss
@@ -29,8 +29,8 @@ $white: #fefefe;
 $pre-color: #ff6908;
 $global-width: 600px;
 $global-width-small: 95%;
-$global-gutter: 45px;
-$body-background: #F0F0F0;
+$global-gutter: 40px;
+$body-background: #E5E5E5;
 $container-background: $white;
 $global-padding: 16px;
 $global-margin: 16px;
